@@ -215,80 +215,6 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkMenuItem" id="number_of_colors1">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Number of colors...</property>
-	      <property name="use_underline">True</property>
-
-	      <child>
-		<widget class="GtkMenu" id="number_of_colors1_menu">
-
-		  <child>
-		    <widget class="GtkRadioMenuItem" id="2_colors1">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">2 colors (bw)</property>
-		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
-		      <signal name="activate" handler="on_2_colors1_activate" last_modification_time="Fri, 14 May 2004 05:55:42 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkRadioMenuItem" id="4_colors1">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">4 colors</property>
-		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
-		      <property name="group">2_colors1</property>
-		      <signal name="activate" handler="on_4_colors1_activate" last_modification_time="Fri, 14 May 2004 05:55:42 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkRadioMenuItem" id="7_colors1">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">7 colors</property>
-		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
-		      <property name="group">2_colors1</property>
-		      <signal name="activate" handler="on_7_colors1_activate" last_modification_time="Fri, 14 May 2004 05:55:42 GMT"/>
-		    </widget>
-		  </child>
-
-		  <child>
-		    <widget class="GtkRadioMenuItem" id="8_colors1">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">8 colors</property>
-		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
-		      <property name="group">2_colors1</property>
-		      <signal name="activate" handler="on_8_colors1_activate" last_modification_time="Fri, 14 May 2004 15:26:48 GMT"/>
-		    </widget>
-		  </child>
-		  
-		  <child>
-		    <widget class="GtkRadioMenuItem" id="b_colors1">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">blurry</property>
-		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
-		      <property name="group">2_colors1</property>
-		      <signal name="activate" handler="on_b_colors1_activate" last_modification_time="Fri, 14 May 2004 15:26:48 GMT"/>
-		    </widget>
-		  </child>
-		  
-		</widget>
-	      </child>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkSeparatorMenuItem" id="separator21">
-	      <property name="visible">True</property>
-	    </widget>
-	  </child>
-
-	  <child>
 	    <widget class="GtkRadioMenuItem" id="normal_view1">
 	      <property name="visible">True</property>
 	      <property name="label" translatable="yes">_Normal view (x1)</property>
